--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "payload-crowdin-sync",
   "version": "0.1.1",
   "description": "Automatically upload/sync localized fields from the default locale to CrowdIn. Make these fields read-only in other locales and update them using CrowdIn translations.",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "build": "tsc",
     "release": "standard-version"
   },
   "repository": {
@@ -19,9 +21,19 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.1",
     "@commitlint/config-conventional": "^17.6.1",
+    "@types/deep-equal": "^1.0.1",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.1",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
-    "standard-version": "^9.5.0"
+    "jest": "^29.5.0",
+    "standard-version": "^9.5.0",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.4"
+  },
+  "peerDependencies": {
+    "express": "^4.18.2",
+    "payload": "^1.0.27"
   },
   "config": {
     "commitizen": {
@@ -32,5 +44,10 @@
     "extends": [
       "@commitlint/config-conventional"
     ]
+  },
+  "dependencies": {
+    "@crowdin/crowdin-api-client": "^1.22.1",
+    "deep-equal": "^2.2.0",
+    "slate-serializers": "^0.0.32"
   }
 }
