--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   },
   "homepage": "https://github.com/thompsonsj/payload-crowdin-sync#readme",
   "devDependencies": {
-    "@commitlint/cli": "^17.6.1",
-    "@commitlint/config-conventional": "^17.6.1",
+    "@commitlint/cli": "^17.6.3",
+    "@commitlint/config-conventional": "^17.6.3",
     "@types/deep-equal": "^1.0.1",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
@@ -33,7 +33,8 @@
   },
   "peerDependencies": {
     "express": "^4.18.2",
-    "payload": "^1.0.27"
+    "payload": "^1.0.27",
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "config": {
     "commitizen": {
@@ -46,8 +47,13 @@
     ]
   },
   "dependencies": {
-    "@crowdin/crowdin-api-client": "^1.22.1",
-    "deep-equal": "^2.2.0",
+    "@crowdin/crowdin-api-client": "^1.22.2",
+    "deep-equal": "^2.2.1",
+    "payload": "^1.8.3",
     "slate-serializers": "^0.0.32"
+  },
+  "volta": {
+    "node": "16.20.0",
+    "yarn": "1.22.19"
   }
 }
