--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "@crowdin/crowdin-api-client": "^1.22.2",
     "deep-equal": "^2.2.1",
+    "lodash": "^4.17.21",
     "payload": "^1.8.3",
     "slate-serializers": "^0.0.32"
   },
