--- a/package.json
+++ b/package.json
@@ -19,16 +19,21 @@
   },
   "homepage": "https://github.com/thompsonsj/payload-crowdin-sync#readme",
   "devDependencies": {
+    "@babel/core": "^7.22.0",
+    "@babel/preset-env": "^7.22.0",
+    "@babel/preset-typescript": "^7.21.5",
     "@commitlint/cli": "^17.6.3",
     "@commitlint/config-conventional": "^17.6.3",
     "@types/deep-equal": "^1.0.1",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
+    "babel-jest": "^29.5.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "jest": "^29.5.0",
     "standard-version": "^9.5.0",
     "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
   "peerDependencies": {
