--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "release": "standard-version"
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -30,9 +29,7 @@
     "@types/node": "^20.2.5",
     "babel-jest": "^29.5.0",
     "commitizen": "^4.3.0",
-    "cz-conventional-changelog": "^3.3.0",
     "jest": "^29.5.0",
-    "standard-version": "^9.5.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
@@ -41,11 +38,6 @@
     "express": "^4.18.2",
     "payload": "^1.0.27",
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
   },
   "commitlint": {
     "extends": [
