--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
+    "develop": "tsc --watch",
     "test": "jest --forceExit --detectOpenHandles"
   },
   "repository": {
@@ -23,20 +24,20 @@
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
-    "@commitlint/cli": "^17.6.3",
-    "@commitlint/config-conventional": "^17.6.3",
+    "@commitlint/cli": "^17.6.6",
+    "@commitlint/config-conventional": "^17.6.6",
     "@types/deep-equal": "^1.0.1",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
-    "@types/node": "^20.2.5",
+    "@types/node": "^20.3.2",
     "babel-jest": "^29.5.0",
     "commitizen": "^4.3.0",
     "get-port": "^7.0.0",
     "isomorphic-fetch": "^3.0.0",
     "jest": "^29.5.0",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.6"
   },
   "peerDependencies": {
     "express": "^4.18.2",
@@ -49,13 +50,13 @@
     ]
   },
   "dependencies": {
-    "@crowdin/crowdin-api-client": "^1.23.0",
+    "@crowdin/crowdin-api-client": "^1.23.2",
     "@types/dot-object": "^2.1.2",
     "deep-equal": "^2.2.1",
     "dot-object": "^2.1.4",
     "lodash": "^4.17.21",
-    "payload": "^1.8.3",
-    "slate-serializers": "^0.0.33"
+    "payload": "^1.10.4",
+    "slate-serializers": "^0.4.0"
   },
   "volta": {
     "node": "16.20.0",
