--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "get-port": "^7.0.0",
     "isomorphic-fetch": "^3.0.0",
     "jest": "^29.5.0",
+    "nock": "^13.3.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
