--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/dot-object": "^2.1.2",
     "deep-equal": "^2.2.1",
     "dot-object": "^2.1.4",
+    "joi": "^17.9.2",
     "lodash": "^4.17.21",
     "payload": "^1.11.0",
     "slate-serializers": "^0.4.0"
