--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "isomorphic-fetch": "^3.0.0",
     "jest": "^29.6.1",
     "nock": "^13.3.1",
+    "prettier": "3.0.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
