--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "isomorphic-fetch": "^3.0.0",
     "jest": "^29.6.1",
     "nock": "^13.3.1",
-    "prettier": "3.0.0",
+    "prettier": "^2.8.8",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
