--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
     "@babel/preset-typescript": "^7.23.0",
     "@commitlint/cli": "^17.7.2",
     "@commitlint/config-conventional": "^17.7.0",
+    "@swc/core": "^1.3.92",
+    "@swc/jest": "^0.2.29",
     "@types/deep-equal": "^1.0.2",
     "@types/express": "^4.17.18",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.8.3",
     "babel-jest": "^29.7.0",
     "commitizen": "^4.3.0",
+    "get-port": "^7.0.0",
     "isomorphic-fetch": "^3.0.0",
     "jest": "^29.7.0",
     "nock": "^13.3.3",
