--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/preset-typescript": "^7.23.0",
     "@commitlint/cli": "^17.7.2",
     "@commitlint/config-conventional": "^17.7.0",
+    "@shelf/jest-mongodb": "^4.1.7",
     "@swc/core": "^1.3.92",
     "@swc/jest": "^0.2.29",
     "@types/deep-equal": "^1.0.2",
