--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "tsc",
     "develop": "tsc --watch",
-    "test": "jest --forceExit --detectOpenHandles",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest --forceExit --detectOpenHandles",
     "prepare": "yarn build",
     "prettier": "npx prettier . --write"
   },
@@ -34,6 +34,7 @@
     "@shelf/jest-mongodb": "^4.1.7",
     "@swc/core": "^1.3.92",
     "@swc/jest": "^0.2.29",
+    "@swc/register": "^0.1.10",
     "@types/deep-equal": "^1.0.2",
     "@types/express": "^4.17.18",
     "@types/jest": "^29.5.5",
