--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "tsc",
     "develop": "tsc --watch",
-    "test": "jest --forceExit --detectOpenHandles",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest --forceExit --detectOpenHandles",
     "prepare": "yarn build",
     "prettier": "npx prettier . --write"
   },
@@ -25,23 +25,28 @@
   },
   "homepage": "https://github.com/thompsonsj/payload-crowdin-sync#readme",
   "devDependencies": {
-    "@babel/core": "^7.22.17",
-    "@babel/preset-env": "^7.22.15",
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
-    "@babel/preset-typescript": "^7.22.15",
-    "@commitlint/cli": "^17.7.1",
-    "@commitlint/config-conventional": "^17.7.0",
-    "@types/deep-equal": "^1.0.1",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.4",
-    "@types/node": "^20.6.0",
+    "@babel/preset-typescript": "^7.23.2",
+    "@commitlint/cli": "^17.8.0",
+    "@commitlint/config-conventional": "^17.8.0",
+    "@shelf/jest-mongodb": "^4.1.7",
+    "@swc/core": "^1.3.93",
+    "@swc/jest": "^0.2.29",
+    "@swc/register": "^0.1.10",
+    "@types/deep-equal": "^1.0.3",
+    "@types/express": "^4.17.20",
+    "@types/jest": "^29.5.6",
+    "@types/node": "^20.8.7",
+    "@types/uuid": "^9.0.6",
     "babel-jest": "^29.7.0",
     "commitizen": "^4.3.0",
     "get-port": "^7.0.0",
     "isomorphic-fetch": "^3.0.0",
     "jest": "^29.7.0",
-    "nock": "^13.3.3",
-    "prettier": "^3.0.3",
+    "nock": "^13.3.6",
+    "prettier": "^2.8.8",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
@@ -57,13 +62,14 @@
     ]
   },
   "dependencies": {
-    "@crowdin/crowdin-api-client": "^1.24.0",
-    "@types/dot-object": "^2.1.2",
+    "@crowdin/crowdin-api-client": "^1.25.0",
+    "@payloadcms/richtext-slate": "^1.0.6",
+    "@types/dot-object": "^2.1.4",
     "deep-equal": "^2.2.2",
     "dot-object": "^2.1.4",
-    "joi": "^17.10.1",
+    "joi": "^17.11.0",
     "lodash": "^4.17.21",
-    "payload": "^1.15.5",
+    "payload": "^2.0.11",
     "slate-serializers": "^2.0.1"
   },
   "volta": {
