--- a/package.json
+++ b/package.json
@@ -49,11 +49,12 @@
     "prettier": "^2.8.8",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "payload": "^2"
   },
   "peerDependencies": {
     "express": "^4.18.2",
-    "payload": "^2.0.0",
+    "payload": "^2",
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "commitlint": {
@@ -69,8 +70,7 @@
     "deep-equal": "^2.2.2",
     "dot-object": "^2.1.4",
     "joi": "^17.11.0",
-    "lodash": "^4.17.21",
-    "payload": "^2.0.0"
+    "lodash": "^4.17.21"
   },
   "volta": {
     "node": "16.20.0",
