--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -15,11 +15,6 @@ jobs:
     steps:
       - uses: google-github-actions/release-please-action@v4
         with:
-          # this assumes that you have created a personal access token
-          # (PAT) and configured it as a GitHub action secret named
-          # `MY_RELEASE_PLEASE_TOKEN` (this secret name is not important).
           token: ${{ secrets.PCS_RELEASE_PLEASE_TOKEN }}
-          # this is a built-in strategy in release-please, see "Action Inputs"
-          # for more options
-          release-type: simple
-          path: ./plugin
+          config-file: release-please-config.json
+          manifest-file: .release-please-manifest.json
