chore(releasepleaseconfig): set node as release type

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -2,7 +2,7 @@
   "packages": {
     ".": {
       "changelog-path": "CHANGELOG.md",
-      "release-type": "simple",
+      "release-type": "node",
       "bump-minor-pre-major": false,
       "bump-patch-for-minor-pre-major": false,
       "draft": false,
@@ -10,7 +10,7 @@
     },
     "./plugin": {
       "changelog-path": "./plugin/CHANGELOG.md",
-      "release-type": "simple",
+      "release-type": "node",
       "bump-minor-pre-major": false,
       "bump-patch-for-minor-pre-major": false,
       "draft": false,
@@ -18,12 +18,13 @@
     },
     "./dev": {
       "changelog-path": "./dev/CHANGELOG.md",
-      "release-type": "simple",
+      "release-type": "node",
       "bump-minor-pre-major": false,
       "bump-patch-for-minor-pre-major": false,
       "draft": false,
       "prerelease": false
     }
   },
+  "plugins": ["node-workspace"],
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
 }
