--- a/release-please-config.json
+++ b/release-please-config.json
@@ -8,7 +8,7 @@
       "draft": false,
       "prerelease": false
     },
-    "./plugin": {
+    "plugin": {
       "changelog-path": "./plugin/CHANGELOG.md",
       "release-type": "node",
       "bump-minor-pre-major": false,
@@ -16,7 +16,7 @@
       "draft": false,
       "prerelease": false
     },
-    "./dev": {
+    "dev": {
       "changelog-path": "./dev/CHANGELOG.md",
       "release-type": "node",
       "bump-minor-pre-major": false,
