--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -26,13 +26,13 @@ jobs:
         uses: actions/setup-node@v1
         if: ${{ steps.release.outputs.releases_created }}
         with:
-          node-version: 14
+          node-version: 16
           registry-url: 'https://registry.npmjs.org'
       - name: Build Packages
         if: ${{ steps.release.outputs.releases_created }}
         run: |
-          npm install
-          npx lerna bootstrap
+          npm ci
+          nx build plugin
 
       # Release Please has already incremented versions and published tags, so we just
       # need to publish all unpublished versions to NPM here
@@ -41,4 +41,4 @@ jobs:
         if: ${{ steps.release.outputs.releases_created }}
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-        run: npx lerna publish from-package --no-push --no-private --yes
+        run: nx publish plugin
