--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Build Packages
         if: ${{ steps.release.outputs.releases_created }}
         run: |
-          npm ci
+          npm install
           nx build plugin
 
       # Release Please has already incremented versions and published tags, so we just
