build(package.json): add release script

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.3.0",
   "license": "MIT",
   "scripts": {
+    "release": "nx build plugin && npm publish --prefix dist/plugin",
     "test": "nx run-many --all --target=test"
   },
   "private": true,
