--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@crowdin/crowdin-api-client": "^1.28.2",
     "@payloadcms/bundler-webpack": "^1.0.5",
     "@payloadcms/db-mongodb": "^1.1.0",
+    "@payloadcms/richtext-lexical": "^0.5.0",
     "@payloadcms/richtext-slate": "^1.3.1",
     "@slate-serializers/html": "^2.1.6",
     "@swc/helpers": "^0.5.3",
@@ -64,6 +65,7 @@
     "nodemon": "^3.0.2",
     "nx": "17.2.4",
     "prettier": "^3.1.1",
+    "prettier-2": "npm:prettier@^2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
