--- a/plugin/tsconfig.lib.json
+++ b/plugin/tsconfig.lib.json
@@ -5,6 +5,6 @@
     "declaration": true,
     "types": ["node"]
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "../dev/src/lib/tests/fields/lexical-editor-with-blocks.fixture.ts", "../dev/src/lib/tests/fields/lexical-editor-with-blocks.test.ts"],
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
 }
