--- a/plugin/tsconfig.spec.json
+++ b/plugin/tsconfig.spec.json
@@ -9,6 +9,6 @@
     "jest.config.ts",
     "src/**/*.test.ts",
     "src/**/*.spec.ts",
-    "src/**/*.d.ts"
-, "../dev/src/lib/tests/fields/lexical-editor-with-blocks.test.ts"  ]
+    "src/**/*.d.ts",
+  ]
 }
