feat(plugin): manual translation flag option

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.4.0",
   "license": "MIT",
   "scripts": {
-    "release": "nx build plugin && npm publish --prefix dist/plugin",
+    "release": "nx build plugin && cd dist/plugin && npm publish",
     "test": "nx run-many --all --target=test"
   },
   "private": true,
