refactor(dev-alternative-config): create another payload test install

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -23,6 +23,14 @@
       "bump-patch-for-minor-pre-major": false,
       "draft": false,
       "prerelease": false
+    },
+    "dev-alternative-config": {
+      "changelog-path": "dev-alternative-config/CHANGELOG.md",
+      "release-type": "node",
+      "bump-minor-pre-major": false,
+      "bump-patch-for-minor-pre-major": false,
+      "draft": false,
+      "prerelease": false
     }
   },
   "plugins": ["node-workspace"],
