--- a/package.json
+++ b/package.json
@@ -33,23 +33,23 @@
     "@babel/preset-typescript": "^7.23.3",
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
-    "@nx/eslint": "17.2.7",
-    "@nx/eslint-plugin": "17.2.7",
-    "@nx/jest": "17.2.7",
-    "@nx/js": "17.2.7",
-    "@nx/workspace": "17.2.7",
+    "@nx/eslint": "18.0.4",
+    "@nx/eslint-plugin": "18.0.4",
+    "@nx/jest": "18.0.4",
+    "@nx/js": "18.0.4",
+    "@nx/workspace": "18.0.4",
     "@shelf/jest-mongodb": "^4.2.0",
-    "@swc-node/register": "~1.6.8",
+    "@swc-node/register": "1.8.0",
     "@swc/core": "~1.3.101",
     "@swc/jest": "^0.2.29",
     "@swc/register": "^0.1.10",
     "@types/deep-equal": "^1.0.4",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
-    "@types/node": "20.10.5",
+    "@types/node": "18.19.17",
     "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "@typescript-eslint/parser": "^6.15.0",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
     "babel-jest": "^29.7.0",
     "commitizen": "^4.3.0",
     "copyfiles": "^2.4.1",
@@ -63,7 +63,7 @@
     "mongodb-memory-server": "^9.1.3",
     "nock": "^13.4.0",
     "nodemon": "^3.0.2",
-    "nx": "17.2.7",
+    "nx": "18.0.4",
     "prettier": "^3.1.1",
     "prettier-2": "npm:prettier@^2",
     "ts-jest": "^29.1.1",
@@ -79,3 +79,4 @@
     "node": "16.20.0"
   }
 }
+
