--- a/package.json
+++ b/package.json
@@ -8,48 +8,48 @@
   },
   "private": true,
   "dependencies": {
-    "@crowdin/crowdin-api-client": "^1.28.2",
-    "@payloadcms/bundler-webpack": "^1.0.5",
-    "@payloadcms/db-mongodb": "^1.1.1",
-    "@payloadcms/richtext-lexical": "^0.5.0",
-    "@payloadcms/richtext-slate": "^1.3.1",
+    "@crowdin/crowdin-api-client": "^1.30.0",
+    "@payloadcms/bundler-webpack": "^1.0.6",
+    "@payloadcms/db-mongodb": "^1.4.2",
+    "@payloadcms/richtext-lexical": "^0.7.0",
+    "@payloadcms/richtext-slate": "^1.4.0",
     "@slate-serializers/html": "^2.1.6",
-    "@swc/helpers": "^0.5.3",
+    "@swc/helpers": "^0.5.6",
     "@types/dot-object": "^2.1.6",
     "deep-equal": "^2.2.3",
     "dot-object": "^2.1.4",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "joi": "^17.11.0",
+    "joi": "^17.12.2",
     "lodash": "^4.17.21",
-    "payload": "^2.5.0",
+    "payload": "^2.11.1",
     "react": "^18.2.0",
     "tslib": "^2.6.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.6",
-    "@babel/preset-env": "^7.23.6",
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
-    "@commitlint/cli": "^18.4.3",
-    "@commitlint/config-conventional": "^18.4.3",
-    "@nx/eslint": "17.2.7",
-    "@nx/eslint-plugin": "17.2.7",
-    "@nx/jest": "17.2.7",
-    "@nx/js": "17.2.7",
-    "@nx/workspace": "17.2.7",
+    "@commitlint/cli": "^18.6.1",
+    "@commitlint/config-conventional": "^18.6.2",
+    "@nx/eslint": "18.0.4",
+    "@nx/eslint-plugin": "18.0.4",
+    "@nx/jest": "18.0.4",
+    "@nx/js": "18.0.4",
+    "@nx/workspace": "18.0.4",
     "@shelf/jest-mongodb": "^4.2.0",
-    "@swc-node/register": "~1.6.8",
-    "@swc/core": "~1.3.101",
-    "@swc/jest": "^0.2.29",
+    "@swc-node/register": "1.8.0",
+    "@swc/core": "~1.4.2",
+    "@swc/jest": "^0.2.36",
     "@swc/register": "^0.1.10",
     "@types/deep-equal": "^1.0.4",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.11",
-    "@types/node": "20.10.5",
-    "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "@typescript-eslint/parser": "^6.15.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "20.11.19",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
     "babel-jest": "^29.7.0",
     "commitizen": "^4.3.0",
     "copyfiles": "^2.4.1",
@@ -60,17 +60,17 @@
     "isomorphic-fetch": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
-    "mongodb-memory-server": "^9.1.3",
-    "nock": "^13.4.0",
-    "nodemon": "^3.0.2",
-    "nx": "17.2.7",
-    "prettier": "^3.1.1",
+    "mongodb-memory-server": "^9.1.6",
+    "nock": "^13.5.3",
+    "nodemon": "^3.0.3",
+    "nx": "18.0.4",
+    "prettier": "^3.2.5",
     "prettier-2": "npm:prettier@^2",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3",
-    "verdaccio": "^5.29.0"
+    "verdaccio": "^5.29.1"
   },
   "nx": {
     "includedScripts": []
@@ -79,3 +79,4 @@
     "node": "16.20.0"
   }
 }
+
