--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dot-object": "^2.1.4",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "happy-dom": "^14.12.3",
     "joi": "^17.12.2",
     "lodash": "^4.17.21",
     "payload": "^2.11.1",
@@ -79,4 +80,3 @@
     "node": "16.20.0"
   }
 }
-
