--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@payloadcms/richtext-lexical": "^0.7.0",
     "@payloadcms/richtext-slate": "^1.4.0",
     "@slate-serializers/html": "^2.1.6",
-    "@swc/helpers": "^0.5.6",
+    "@swc/helpers": "0.5.12",
     "@types/dot-object": "^2.1.6",
     "deep-equal": "^2.2.3",
     "dot-object": "^2.1.4",
@@ -34,28 +34,28 @@
     "@babel/preset-typescript": "^7.23.3",
     "@commitlint/cli": "^18.6.1",
     "@commitlint/config-conventional": "^18.6.2",
-    "@nx/eslint": "18.0.4",
-    "@nx/eslint-plugin": "18.0.4",
-    "@nx/jest": "18.0.4",
-    "@nx/js": "18.0.4",
-    "@nx/workspace": "18.0.4",
+    "@nx/eslint": "19.5.2",
+    "@nx/eslint-plugin": "19.5.2",
+    "@nx/jest": "19.5.2",
+    "@nx/js": "19.5.2",
+    "@nx/workspace": "19.5.2",
     "@shelf/jest-mongodb": "^4.2.0",
-    "@swc-node/register": "1.8.0",
-    "@swc/core": "~1.4.2",
-    "@swc/jest": "^0.2.36",
+    "@swc-node/register": "1.9.2",
+    "@swc/core": "1.5.7",
+    "@swc/jest": "0.2.36",
     "@swc/register": "^0.1.10",
     "@types/deep-equal": "^1.0.4",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "20.11.19",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "6.21.0",
-    "@typescript-eslint/parser": "6.21.0",
+    "@typescript-eslint/eslint-plugin": "7.17.0",
+    "@typescript-eslint/parser": "7.17.0",
     "babel-jest": "^29.7.0",
     "commitizen": "^4.3.0",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
-    "eslint": "~8.56.0",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "get-port": "^7.0.0",
     "isomorphic-fetch": "^3.0.0",
@@ -64,13 +64,13 @@
     "mongodb-memory-server": "^9.1.6",
     "nock": "^13.5.3",
     "nodemon": "^3.0.3",
-    "nx": "18.0.4",
+    "nx": "19.5.2",
     "prettier": "^3.2.5",
     "prettier-2": "npm:prettier@^2",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.3",
+    "typescript": "5.5.4",
     "verdaccio": "^5.29.1"
   },
   "nx": {
