--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "mongodb-memory-server": "^9.1.6",
-    "nock": "14.0.0-beta.9",
+    "nock": "13.5.4",
     "nodemon": "^3.1.4",
     "nx": "19.5.2",
     "prettier": "^3.3.3",
@@ -77,6 +77,6 @@
     "includedScripts": []
   },
   "volta": {
-    "node": "18.20.4"
+    "node": "17.9.1"
   }
 }
