feat(transactions): add support to helpers, translations API

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "release": "nx build plugin && cd dist/plugin && npm publish",
-    "test": "nx run-many --all --target=test"
+    "test": "nx run-many --all --target=test --runInBand"
   },
   "private": true,
   "dependencies": {
