--- a/plugin/tsconfig.json
+++ b/plugin/tsconfig.json
@@ -1,25 +1,13 @@
 {
   "compilerOptions": {
-    "target": "es2017",
-    "baseUrl": ".",
-    "lib": [
-      "DOM",
-      "DOM.Iterable",
-      "ES2022"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
+    "moduleResolution": "bundler",
     "jsx": "preserve",
-    "incremental": true,
+    "skipLibCheck": true,
   },
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": [
     "node_modules"
-  ]
+  ],
 }
