--- a/package.json
+++ b/package.json
@@ -41,11 +41,11 @@
     "@commitlint/cli": "^18.6.1",
     "@commitlint/config-conventional": "^18.6.2",
     "@eslint/eslintrc": "^3.2.0",
-    "@nx/eslint": "19.5.2",
-    "@nx/eslint-plugin": "19.5.2",
-    "@nx/jest": "19.5.2",
-    "@nx/js": "19.5.2",
-    "@nx/workspace": "19.5.2",
+    "@nx/eslint": "20.3.1",
+    "@nx/eslint-plugin": "20.3.1",
+    "@nx/jest": "20.3.1",
+    "@nx/js": "20.3.1",
+    "@nx/workspace": "20.3.1",
     "@shelf/jest-mongodb": "^4.3.2",
     "@swc-node/register": "1.9.2",
     "@swc/core": "1.5.7",
@@ -53,14 +53,14 @@
     "@swc/register": "^0.1.10",
     "@types/deep-equal": "^1.0.4",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "29.5.14",
     "@types/node": "^22.10.5",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.1",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "7.17.0",
     "@typescript-eslint/parser": "7.17.0",
-    "babel-jest": "^29.7.0",
+    "babel-jest": "29.7.0",
     "commitizen": "^4.3.0",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
@@ -69,13 +69,13 @@
     "eslint-config-prettier": "^9.1.0",
     "get-port": "^7.1.0",
     "isomorphic-fetch": "^3.0.0",
-    "jest": "^29.7.0",
+    "jest": "29.7.0",
     "jest-environment-node": "^29.7.0",
     "mongodb-memory-server": "^9.1.6",
     "nock": "13.5.5",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
-    "nx": "19.5.2",
+    "nx": "20.3.1",
     "prettier": "^3.4.2",
     "prettier-2": "npm:prettier@^2",
     "ts-jest": "^29.2.5",
