--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "jest": "29.7.0",
     "jest-environment-node": "^29.7.0",
     "mongodb-memory-server": "^10.1.3",
-    "nock": "13.5.6",
+    "nock": "^14.0.0-beta.19",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
     "nx": "20.3.1",
