--- a/plugin/tsconfig.json
+++ b/plugin/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "target": "ESNext", // oder "ES2022", "ES2021", "ES2020"
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "bundler",
