--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
     "@eslint/eslintrc": "^3.2.0",
-    "@nx/eslint": "20.3.1",
-    "@nx/eslint-plugin": "20.3.1",
-    "@nx/jest": "20.3.1",
-    "@nx/js": "20.3.1",
-    "@nx/workspace": "20.3.1",
+    "@nx/eslint": "20.8.0",
+    "@nx/eslint-plugin": "20.8.0",
+    "@nx/jest": "20.8.0",
+    "@nx/js": "20.8.0",
+    "@nx/workspace": "20.8.0",
     "@shelf/jest-mongodb": "^4.3.2",
     "@swc-node/register": "1.10.9",
     "@swc/core": "1.10.7",
@@ -62,7 +62,7 @@
     "cross-env": "^7.0.3",
     "eslint": "8.57.0",
     "eslint-config-next": "15.1.4",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-prettier": "10.1.2",
     "get-port": "^7.1.0",
     "isomorphic-fetch": "^3.0.0",
     "jest": "29.7.0",
@@ -71,14 +71,14 @@
     "nock": "^14.0.0-beta.19",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
-    "nx": "20.3.1",
+    "nx": "20.8.0",
     "prettier": "^3.4.2",
     "prettier-2": "npm:prettier@^2",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "5.7.3",
-    "verdaccio": "^5.31.1"
+    "verdaccio": "6.1.2"
   },
   "nx": {
     "includedScripts": []
