--- a/package.json
+++ b/package.json
@@ -9,75 +9,75 @@
   },
   "private": true,
   "dependencies": {
-    "@crowdin/crowdin-api-client": "^1.41.0",
-    "@payloadcms/db-mongodb": "3.15.1",
-    "@payloadcms/richtext-lexical": "3.15.1",
-    "@payloadcms/richtext-slate": "3.15.1",
-    "@payloadcms/ui": "^3.15.1",
-    "@slate-serializers/html": "^2.2.2",
-    "@swc/helpers": "0.5.15",
+    "@crowdin/crowdin-api-client": "^1.42.0",
+    "@payloadcms/db-mongodb": "3.35.1",
+    "@payloadcms/richtext-lexical": "3.35.1",
+    "@payloadcms/richtext-slate": "3.35.1",
+    "@payloadcms/ui": "^3.35.1",
+    "@slate-serializers/html": "^2.2.3",
+    "@swc/helpers": "0.5.17",
     "@types/dot-object": "^2.1.6",
     "cross-env": "^7.0.3",
     "deep-equal": "^2.2.3",
     "dot-object": "^2.1.5",
-    "dotenv": "^16.4.7",
-    "es-toolkit": "^1.31.0",
+    "dotenv": "^16.5.0",
+    "es-toolkit": "^1.35.0",
     "graphql": "^16.10.0",
     "joi": "^17.13.3",
-    "next": "15.1.4",
-    "payload": "3.15.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "sharp": "0.33.5",
+    "next": "15.3.1",
+    "payload": "3.35.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "sharp": "0.34.1",
     "tslib": "^2.8.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0",
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
-    "@babel/preset-typescript": "^7.26.0",
-    "@eslint/eslintrc": "^3.2.0",
+    "@babel/preset-typescript": "^7.27.0",
+    "@eslint/eslintrc": "^3.3.1",
     "@nx/eslint": "20.8.0",
     "@nx/eslint-plugin": "20.8.0",
     "@nx/jest": "20.8.0",
     "@nx/js": "20.8.0",
     "@nx/workspace": "20.8.0",
-    "@shelf/jest-mongodb": "^4.3.2",
-    "@swc-node/register": "1.10.9",
-    "@swc/core": "1.10.7",
+    "@shelf/jest-mongodb": "^5.1.0",
+    "@swc-node/register": "1.10.10",
+    "@swc/core": "1.11.21",
     "@swc/jest": "0.2.37",
     "@swc/register": "^0.1.10",
     "@types/deep-equal": "^1.0.4",
-    "@types/express": "^5.0.0",
+    "@types/express": "^5.0.1",
     "@types/jest": "29.5.14",
-    "@types/node": "^22.10.5",
-    "@types/react": "19.0.4",
-    "@types/react-dom": "19.0.2",
+    "@types/node": "^22.14.1",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.2",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "7.17.0",
-    "@typescript-eslint/parser": "7.17.0",
+    "@typescript-eslint/eslint-plugin": "8.31.0",
+    "@typescript-eslint/parser": "8.31.0",
     "babel-jest": "29.7.0",
     "commitizen": "^4.3.1",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
-    "eslint": "8.57.0",
-    "eslint-config-next": "15.1.4",
+    "eslint": "9.25.1",
+    "eslint-config-next": "15.3.1",
     "eslint-config-prettier": "10.1.2",
     "get-port": "^7.1.0",
     "isomorphic-fetch": "^3.0.0",
     "jest": "29.7.0",
     "jest-environment-node": "^29.7.0",
-    "mongodb-memory-server": "^10.1.3",
-    "nock": "^14.0.0-beta.19",
-    "nodemailer": "^6.9.16",
+    "mongodb-memory-server": "^10.1.4",
+    "nock": "^14.0.4",
+    "nodemailer": "^6.10.1",
     "nodemon": "^3.1.9",
     "nx": "20.8.0",
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.3",
     "prettier-2": "npm:prettier@^2",
-    "ts-jest": "^29.2.5",
+    "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "5.7.3",
+    "typescript": "5.8.3",
     "verdaccio": "6.1.2"
   },
   "nx": {
