--- a/plugin/package.json
+++ b/plugin/package.json
@@ -2,6 +2,7 @@
   "name": "payload-crowdin-sync",
   "version": "0.35.0",
   "description": "Automatically upload/sync localized fields from the default locale to Crowdin. Make these fields read-only in other locales and update them using Crowdin translations.",
+  "main": "./src/index.ts",
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/.bin/jest --forceExit --detectOpenHandles",
     "prettier": "npx prettier . --write"
