--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@payloadcms/richtext-slate": "3.59.1",
     "@payloadcms/ui": "^3.59.1",
     "@slate-serializers/html": "^2.2.3",
+    "@swc-node/register": "^1.11.1",
     "@swc/helpers": "0.5.17",
     "@types/dot-object": "^2.1.6",
     "cross-env": "^10.1.0",
@@ -25,7 +26,7 @@
     "es-toolkit": "^1.40.0",
     "graphql": "^16.11.0",
     "joi": "^18.0.1",
-    "next": "15.5.4",
+    "next": "15.5.5",
     "payload": "3.59.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -43,7 +44,6 @@
     "@nx/jest": "21.6.4",
     "@nx/js": "21.6.4",
     "@nx/workspace": "21.6.4",
-    "@swc-node/register": "1.11.1",
     "@swc/core": "1.13.19",
     "@swc/jest": "0.2.39",
     "@swc/register": "^0.1.10",
@@ -52,15 +52,15 @@
     "@types/jest": "30.0.0",
     "@types/node": "^24.7.2",
     "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.1",
-    "@typescript-eslint/eslint-plugin": "8.46.0",
-    "@typescript-eslint/parser": "8.46.0",
+    "@types/react-dom": "19.2.2",
+    "@typescript-eslint/eslint-plugin": "8.46.1",
+    "@typescript-eslint/parser": "8.46.1",
     "babel-jest": "30.2.0",
     "commitizen": "^4.3.1",
     "copyfiles": "^2.4.1",
     "cross-env": "^10.1.0",
     "eslint": "9.37.0",
-    "eslint-config-next": "15.5.4",
+    "eslint-config-next": "15.5.5",
     "eslint-config-prettier": "10.1.8",
     "get-port": "^7.1.0",
     "isomorphic-fetch": "^3.0.0",
